[gd_scene load_steps=10 format=2]

[ext_resource path="res://Mundo.gd" type="Script" id=1]
[ext_resource path="res://Roca.tscn" type="PackedScene" id=2]
[ext_resource path="res://Exterior.jpg" type="Texture" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interfaz.tscn" type="PackedScene" id=5]
[ext_resource path="res://001105166_prev(1).wav" type="AudioStream" id=6]
[ext_resource path="res://Dance Bitch (Rick and Morty song)(1).wav" type="AudioStream" id=7]
[ext_resource path="res://Rick and Morty Theme Song [HD].wav" type="AudioStream" id=8]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 280, 250, 0, 0, 0, 0, 40, 250, 0, 0, 0, 0, 40, -265, 0, 0, 0, 0, 280, -265, 0, 0, 0, 0, 280, 250 )
}

[node name="Mundo" type="Node" index="0"]

script = ExtResource( 1 )
Roca = ExtResource( 2 )

[node name="Fondo" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -290.0
margin_top = -50.0
margin_right = 1629.0
margin_bottom = 1029.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0

[node name="Player" parent="." index="1" instance=ExtResource( 4 )]

position = Vector2( 310, 660 )

[node name="RocaTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="ScoreTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="InicioTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="Position2D" type="Position2D" parent="." index="5"]

position = Vector2( 325.778, 495.795 )
scale = Vector2( -2.5, -2 )
_sections_unfolded = [ "Transform" ]

[node name="Camino" type="Path2D" parent="." index="6"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 700, 500 )
rotation = -3.14159
scale = Vector2( 2.5, 2 )
curve = SubResource( 1 )

[node name="RocaPosicion" type="PathFollow2D" parent="Camino" index="0"]

position = Vector2( 73.1268, 210.055 )
rotation = 3.14159
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Interfaz" parent="." index="7" instance=ExtResource( 5 )]

[node name="Muerte" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Juego" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Inicio" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="golpe" from="Player" to="." method="game_over"]

[connection signal="timeout" from="RocaTimer" to="." method="_on_RocaTimer_timeout"]

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]

[connection signal="timeout" from="InicioTimer" to="." method="_on_InicioTimer_timeout"]

[connection signal="inciar_juego" from="Interfaz" to="." method="nuevo_juego"]


